0.3.5.10
  - (zathor) [Settings] added option for DGIndex(NV) to autoload VOB files
             incrementally. Default is enabled. Feature request #2955909

0.3.5.9
  - (sharktooth) [MainForm.cs] Added a big fat warning about patents and binary files when megui finds updates
  - (sharktooth) [x264] Added 2 new "Force SAR" options
  - (sharktooth) [x264] Enabled Trellis with no-cabac option (requires x264 rev 1703+)
  - (zathor) [FPSChooser] + [TargetSizeSCBox] fixed custom FPS and file size saving
  - (zathor) [LogItem] changed default log type to information
  - (zathor) [HDBDStreamExtractor] HdBrStreamExtractor.txt not created anymore
  - (zathor) [HDStreamExtractorIndexer] improved log handling
  - (zathor) [JobQueue] fixed load context menu option. Bug #3024349
  - (zathor) [MuxWindow] language and video name will be visible during load. Bug #3024349
  - (zathor) [JobQueue] enhanced load handling
  - (zathor) [MeGUISettings] + [UpdateWindow] + [VobSubIndexer] added vobsub.dll
  - (zathor) [VobSubIndexWindow] some cosmetics including option to override detection
  - (zathor) [IFOparser] fixed detection of subtitle streams. Bug #2773128
  - (zathor) [VideoPlayer] fixed "go to frame" button. Bug #2860093
  - (zathor) [HDStreamExtractor] some features could not be extracted. Bug #3037750
  - (zathor) [JobQueue] renamed "load" to "edit"
  - (zathor) [FileIndexer] changed supported file type detection
  - (zathor) [OneClickWindow] + [MainForm]. Only supported files can be used in OneClick. Bug #3032668

0.3.5.8
  - (zathor) enhanced error handling of the profile import. an unsuccessful 
             or interrupted profile update will be marked as still missing.
  - (zathor) [x264Encoder] --min-keyint will not be applied if the default value is used

0.3.5.7
  - (sharktooth) [x264ConfigurationPanel] Fix default CRF value when changing from bitrate mode to CRF. Adjusted default bitrate to 1000
  - (zathor) [FileIndexer] improved handling if DGIndexNV is not available