@@ -1,6 +1,7 @@
 0.3.5.10
   - (zathor) [Settings] added option for DGIndex(NV) to autoload VOB files
              incrementally. Default is enabled. Feature request #2955909
+  - (zathor) [Settings] added option to close MeGUI after encoding. Feature request #2954099
 
 0.3.5.9
   - (sharktooth) [MainForm.cs] Added a big fat warning about patents and binary files when megui finds updates
